--- a/sections/onetimesig.tex
+++ b/sections/onetimesig.tex
@@ -251,7 +251,7 @@ It thus follows that with probability at least $1-2^\varepsilon$ the strong veri
   Let $\secpar, \alpha_H$, $\varphi$, $\gamma$, $\beta_\sigma,q,n,\secpar$ be positive integers.
   Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
   Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
-  Then the construction from \autoref{fig:otsconstruction} is a robustly homomorphic.
+  Then the construction from \autoref{fig:otsconstruction} is robustly homomorphic.
 \end{lemma}
 
 \begin{proof}
