--- a/sections/onetimesig.tex
+++ b/sections/onetimesig.tex
@@ -248,7 +248,7 @@ It thus follows that with probability at least $1-2^\varepsilon$ the strong veri
 
 
 \begin{lemma}\label{lem:kots_homomorphic}
-  Let $\secpar, \alpha_H$, $\varphi$, $\gamma$, $\beta_\sigma,q,n,\secpar$ be positive integers.
+  Let $\secpar, \alpha_H$, $\varphi$, $\gamma$, $\beta_\sigma,q,n$ be positive integers.
   Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
   Let $H\colon\; \bin^* \to \tern_{\alpha_H}$ be a hash function.
   Then the construction from \autoref{fig:otsconstruction} is robustly homomorphic.
