Renamed adversary constructed during reduction.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -91,4 +91,4 @@
 \newcommand{\interval}[1]{[#1]}
 
 \newcommand*{\sisadv}{\overline{\adv}}
-\newcommand*{\sisadvkots}{\bdv}
+\newcommand*{\sisadvkots}{\overline{\adv}}
